HasCASL/test/MixIds.casl.output
a
1
'a'
'Ä'
'\''
'\o377'
'\xff'
'\255'
'\n'
'\\'
'\"'
'\"'
b1
b'
bc
b12
b1'
b1d
b'3
b'e
b''
bf4
bf'
bfg
b_1
b_'
b_c
ä_12
ü_1'
a_1d
b_'3
b_'e
b_''
b_f4
b_f'
b_fg
sdafad_fddasfda_dsafsdaf
.sdafad_fddasfda_dsafsdaf
<
<=
>
&
||
+
-
/
~
!@#$^&*?:
..
{}
[]
{-==-}
[++]
[{}{}]
{[]==[]}-{}-{}
__a
__==
__<
__b
>__
>__
__<__
__<__
a[b]
==[==]
==[==]
..[b]
{}..[a]
.a[==,==]
.a[==,{},==]
a[b,c,d]
a[b,c,d]
a[b,c,d]
____a
____a
____a____
__[-__-]__
__[-____-]__
__[-____-]__
__[-__{}{}__-]__
__[-__[{}{[]}]__-]____
______a______b[c]
a__b[c]____
a__b[==]____
a[__{}]
a[__{}__]
a[__{}[a]__]
a[__[__]]
a[__[__]__]
a[__<__]
____
order[__<__]
__order[__<__]__
'a'[__b__]
*[__<__]
__*__[__<__]
__[__]
__<__<[bla]__
__<__<__[bla]
[__]
[{__}]
__[__]
__[__]:=__
__[__]==__
__<__[__>__]
[]
[{}]
*[::]
*[a]
*[rel]
__*__[rel]
__*__[__<__]
*[__[__]]
[[__]]
{[__]}
{__}[____]
a[a]
a{}
a[b]
<[>]
a{b}
<{>}
a{>}
<{b}
a[b[c]]
:=
parse error at 127.1:
unexpected "@"
expecting id

parse error at 128.1:
unexpected "\\"
expecting id

parse error at 129.1-129.2:
unexpected ".!"
expecting id

.?
|
[|__|]
